# fine-coverage

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.rst  pyproject.toml
.github/workflows/: ci.yml
fine_coverage/: ast.py  cli.py  tracer.py
src/: collector.rs  lib.rs  reporter.rs  tracer.rs
src/fine_coverage/: ast.py  cli.py  report.py  tracer.py
tests/: code.py  test_ast.py  test_code.py
typings/rich_argparse/: __init__.pyi
