[package]
name = 'fine-coverage'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = 'fine_coverage'
crate-type = ['cdylib']

[dependencies]
clap = { version = '4.0.29', features = ['derive']}
pyo3 = { version = '0.17.3', features = ['extension-module'] }
