[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'fine-coverage'
description = 'x'
readme = 'README.rst'
requires-python = '>=3.11'
license = 'GPL-3.0'
keywords = []
authors = [
  { name = 'Philipp A.', email = 'flying-sheep@web.de' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = []
dynamic = ['version']

[project.urls]
Documentation = 'https://github.com/flying-sheep/fine-coverage#readme'
Issues = 'https://github.com/flying-sheep/fine-coverage/issues'
Source = 'https://github.com/flying-sheep/fine-coverage'

[tool.hatch.version]
path = 'fine_coverage/__about__.py'

[tool.hatch.envs.default]
dependencies = ['pytest']
[tool.hatch.envs.default.scripts]
test = 'pytest'

[[tool.hatch.envs.test.matrix]]
python = ['3.11']

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib']
