[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'fine-coverage'
description = 'x'
readme = 'README.rst'
requires-python = '>=3.11'
license = 'GPL-3.0'
keywords = []
authors = [
  { name = 'Philipp A.', email = 'flying-sheep@web.de' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
  'rich',
  'rich-argparse>=0.6.0',
]
dynamic = ['version']

[project.scripts]
fine-coverage = 'fine_coverage.cli:run'

[project.urls]
Documentation = 'https://github.com/flying-sheep/fine-coverage#readme'
Issues = 'https://github.com/flying-sheep/fine-coverage/issues'
Source = 'https://github.com/flying-sheep/fine-coverage'

[tool.hatch.version]
path = 'src/fine_coverage/__about__.py'

[tool.hatch.envs.default]
dependencies = [
  'pytest',
  'build',
  'pyright',
]
[tool.hatch.envs.default.scripts]
test = 'pytest {args}'
typecheck = 'pyright {args}'
build = 'python -m build {args}'
[[tool.hatch.envs.default.matrix]]
python = ['3.11']

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib']

[tool.pyright]
include = ['src']

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = [
    # Pyflakes
    'F',
    # Pycodestyle
    'E',
    'W',
    # isort
    'I001'
]
ignore = [
  # Ambiguous variable/class/… name
  'E74',
]
src = ['src', 'tests']
[tool.ruff.per-file-ignores]
'src/fine_coverage/tracer.py' = ['E999']  # https://github.com/charliermarsh/ruff/issues/282
