[build-system]
requires = ['maturin>=0.14,<0.15']
build-backend = 'maturin'

[project]
name = 'fine-coverage'
description = 'Calculate and report region based code coverage.'
readme = 'README.rst'
requires-python = '>=3.11'
license = { file = 'LICENSE.rst' }  # 'GPL-3.0'
keywords = []
authors = [
  { name = 'Philipp A.', email = 'flying-sheep@web.de' },
]
urls.Documentation = 'https://github.com/flying-sheep/fine-coverage#readme'
urls.Issues = 'https://github.com/flying-sheep/fine-coverage/issues'
urls.Source = 'https://github.com/flying-sheep/fine-coverage'
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Rust',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = []
dynamic = ['version']

[project.scripts]
fine-coverage = 'fine_coverage:cli'
